[tool.poetry]
name = "Manual Python Brasil"
version = "0.1.0"
description = ""
authors = ["Marco Rougeth <rougeth@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^4.4.0"
myst-parser = "^0.17.0"
sphinx-autobuild = "^2021.3.14"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
